added an about and skills section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" 
-    content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elizabeth Akossey</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
         <h2><a href="#hero-section">EA</a></h2>
@@ -23,19 +26,21 @@
             </ul>
         </nav>
         <div>
-            <button class="sun-icon"><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-high" viewBox="0 0 16 16">
-            <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6m0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708"/>
-            </svg></a></button>
+            <button class="sun-icon"><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        fill="currentColor" class="bi bi-brightness-high" viewBox="0 0 16 16">
+                        <path
+                            d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6m0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708" />
+                    </svg></a></button>
             <button class="getintouch-btn"><a href="">Get in Touch</a></button>
         </div>
     </header>
     <section class="hero" id="hero-section">
         <div class="hero-div">
             <div class="firstname">
-            <h1 >Elizabeth Nuoma</h1>
+                <h1>Elizabeth Nuoma</h1>
             </div>
             <div class="surname">
-            <h1>Akossey</h1>
+                <h1>Akossey</h1>
             </div>
             <h2>Frontend Developer | Ghana</h2>
             <p>Building responsive web interfaces that improve user <br>experience and support business goals.</p>
@@ -57,21 +62,27 @@
         <div class="about-content">
             <div class="about-info">
                 <p>
-                    I am an AI Developer based in Accra, Ghana, with a strong background in data analytics, web development, and
-                    technical education. I specialize in transforming complex data into intelligent solutions using tools like
+                    I am an AI Developer based in Accra, Ghana, with a strong background in data analytics, web
+                    development, and
+                    technical education. I specialize in transforming complex data into intelligent solutions using
+                    tools like
                     Python, SQL, and modern machine learning techniques.
                 </p>
                 <p>
-                    My expertise spans machine learning, natural language processing, data visualization, and business intelligence.
+                    My expertise spans machine learning, natural language processing, data visualization, and business
+                    intelligence.
                     I also build web interfaces using HTML and CSS to support data-driven and AI-powered applications.
                 </p>
                 <p>
-                    Beyond development, I'm passionate about teaching and mentorship. I've taught web development to over 50
-                    students, helping them gain valuable digital skills and break into tech. I actively contribute to open-source
+                    Beyond development, I'm passionate about teaching and mentorship. I've taught web development to
+                    over 50
+                    students, helping them gain valuable digital skills and break into tech. I actively contribute to
+                    open-source
                     projects and enjoy sharing knowledge to uplift the next generation of AI and data professionals.
                 </p>
                 <p>
-                    Driven by continuous learning and real-world problem solving, I aim to build ethical and impactful AI solutions
+                    Driven by continuous learning and real-world problem solving, I aim to build ethical and impactful
+                    AI solutions
                     that make a difference.
                 </p>
             </div>
@@ -99,6 +110,8 @@
             </div>
         </div>
     </section>
+    <!-- Technical Skills -->
+
     <section class="skills">
         <h2>Technical Skills</h2>
         <div class="skills-container">
@@ -107,110 +120,67 @@
                 <h3>Programming Languages</h3>
                 <div class="t-skill">
                     <span>Python</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%"></div>
-                    </div>
-                    <span class="percent">90%</span>
                 </div>
                 <div class="t-skill">
                     <span>SQL</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%"></div>
-                    </div>
-                    <span class="percent">85%</span>
                 </div>
-            </div>
-            <!-- Web technologies -->
-            <div class="skill-card">
-                <h3>Web Technologies</h3>
                 <div class="t-skill">
                     <span>HTML</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%"></div>
-                    </div>
-                    <span class="percent">90%</span>
                 </div>
                 <div class="t-skill">
                     <span>CSS</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%"></div>
-                    </div>
-                    <span class="percent">85%</span>
                 </div>
             </div>
+            
+
+
             <!-- Frameworks and libraries -->
             <div class="skill-card">
+                <img class="cog" src="pictures/framework_icon-removebg-preview.png" alt="framework">
                 <h3>Frameworks and Libraries</h3>
                 <div class="t-skill">
                     <span>Tkinter</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%"></div>
-                    </div>
-                    <span class="percent">90%</span>
                 </div>
                 <div class="t-skill">
                     <span>Ttkboostrap</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%"></div>
-                    </div>
-                    <span class="percent">85%</span>
                 </div>
                 <div class="t-skill">
                     <span>Scipy</span>
-                    <div class="progress-bar">
-                         <div class="progress" style="width: 85%"></div>
-                    </div>
-                    <span class="percent">85%</span>
                 </div>
                 <div class="t-skill">
                     <span>Stats Model</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%"></div>
-                    </div>
-                    <span class="percent">85%</span>
                 </div>
             </div>
+
+
+
             <!-- Tools and platforms -->
             <div class="skill-card">
+                <img  class="tool" src="pictures/tools.png" alt="tools and platforms">
                 <h3>Tools and Platforms</h3>
                 <div class="t-skill">
                     <span>Netlify</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%"></div>
-                    </div>
-                    <span class="percent">90%</span>
                 </div>
                 <div class="t-skill">
                     <span>Git and Github</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%"></div>
-                    </div>
-                    <span class="percent">85%</span>
                 </div>
                 <div class="t-skill">
                     <span>Visual Studio Code</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%"></div>
-                    </div>
-                    <span class="percent">85%</span>
                 </div>
             </div>
+
+
             <!-- Database Systems -->
             <div class="skill-card">
                 <h3>Database Systems</h3>
                 <div class="t-skill">
-                    <span>HTML</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%"></div>
-                    </div>
-                    <span class="percent">90%</span>
+                    <span>My SQL</span>
                 </div>
                 <div class="t-skill">
-                    <span>CSS</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%"></div>
-                    </div>
-                    <span class="percent">85%</span>
+                    <span>MongoDB</span>
+                </div>
+                <div class="t-skill">
+                    <span>MS SQL Server</span>
                 </div>
             </div>
         </div>
