--- a/index.html
+++ b/index.html
@@ -436,5 +436,18 @@
             </div>
         </div>
     </section>
+    <!-- Footer Section -->
+    <footer>
+        <div class="footer-social-icons">
+            <a href="https://linkedin.com/in/elizabeth-nuoma-akossey" target="_blank" aria-label="LinkedIn"><i
+                    class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/ElizabethNuomaAkossey" target="_blank" aria-label="GitHub"><i
+                    class="fab fa-github"></i></a>
+            <a href="mailto:elizabethnuomaakossey@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+            <a href="tel:+233555088881" aria-label="Phone"><i class="fas fa-phone-alt"></i></a>
+        </div>
+        <p class="footer-copyright">&copy; 2025 Elizabeth Nuoma Akossey. All rights reserved.</p>
+        <p class="footer-info">Frontend Developer | Accra, Ghana</p>
+    </footer>
 </body>
 </html>
