--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             </div>
             <div class="surname">
                 <h1>Akossey</h1>
-                <!--  Pronunciation icon -->
-                <!-- <button class="sound-btn" onclick="sayName()">
+                 <!-- Pronunciation icon -->
+                <button class="sound-btn" onclick="sayName()">
                     <i class="fa-solid fa-volume-high"></i>
-                </button> -->
+                </button>
             </div>
             <h2>Frontend Developer | Ghana</h2>
             <p>Building responsive web interfaces that improve user <br>experience and support business goals.</p>
@@ -414,7 +414,7 @@
             <div class="send-message-card">
                 <h3 class="card-title">Send a Message</h3>
                 <p class="card-subtitle">I'll get back to you as soon as possible</p>
-                <form>
+                <form action="https://formspree.io/f/mpwlggjd", method="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" placeholder="Your name">
