--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <h3>AI & Data Expertise</h3>
                     <p>
-                        I am an AI Developer based in Accra, Ghana, with a strong background in data analytics, 
+                        I am an AI Developer, with a strong background in data analytics, 
                         web development, and technical education. I specialize in transforming complex data into 
                         intelligent solutions using tools like Python, SQL, and modern machine learning techniques.
                     </p>
@@ -411,6 +411,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="pictures/bank.jpg" alt="bank_deposit">
                         <div class="project-placeholder">
                             <i class="fas fa-chart-line"></i>
                         </div>
@@ -438,6 +439,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="pictures/stop cyber bully.jpg" alt="">
                         <div class="project-placeholder">
                             <i class="fas fa-shield-alt"></i>
                         </div>
