made changes to the title on the hero section and also changed the resume file

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <button class="sound-btn" onclick="sayName()">
                         <i class="fas fa-volume-high"></i>
                     </button>
-                    <p class="hero-subtitle">AI Developer | Data Scientist | Ghana</p>
+                    <p class="hero-subtitle">Web Developer | Data Scientist | Ghana</p>
                     <p class="hero-description">
                         Building intelligent solutions and responsive web interfaces that improve user experience and support business goals through data-driven insights.
                     </p>
@@ -78,7 +78,7 @@
                                 Resume <i class="fas fa-chevron-down"></i>
                             </button>
                             <div class="dropdown-menu">
-                                <a href="pictures/Elizabeth_Nuoma_Akossey_(Web Developer)..pdf" download>
+                                <a href="pictures/Elizabeth_Nuoma_Akossey_(Frontend Developer).pdf" download>
                                     <i class="fas fa-download"></i> Download
                                 </a>
                                 <a href="#" onclick="playResumeSummary()">
