updated the project section with new projects and removed some

--- a/index.html
+++ b/index.html
@@ -314,6 +314,56 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="pictures/event-management.png" alt="Event Mangement">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://github.com/ElizabethNuomaAkossey/event_manager" class="project-link" aria-label="View Code">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="#" class="project-link" aria-label="Live Demo">
+                                    <i class="fas fa-external-link-alt"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Event Management</h3>
+                        <p class="project-description">An interactive and responsive event management website for creating, viewing, and deleting events.</p>
+                        <div class="project-tech">
+                            <span>NiceGUI</span>
+                            <span>Tailwind CSS</span>
+                            <span>Deployment</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="pictures/Garden-Fresh.png" alt="Garden-Fresh">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://github.com/ElizabethNuomaAkossey/nicegui_restaurant_website" class="project-link" aria-label="View Code">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="https://nicegui-restaurant-website.onrender.com" class="project-link" aria-label="Live Demo">
+                                    <i class="fas fa-external-link-alt"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Brahabobom M/A School</h3>
+                        <p class="project-description">Restaurant website featuring menu, online ordering, and location information..</p>
+                        <div class="project-tech">
+                            <span>NiceGUI</span>
+                            <span>Tailwind CSS</span>
+                            <span>Responsive Design</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
                         <img src="pictures/tarkwadevs.png" alt="Tarkwa Devs Company">
                         <div class="project-overlay">
                             <div class="project-links">
@@ -327,7 +377,7 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Tarkwa Devs Company</h3>
+                        <h3 class="project-title">Tarkwa Devs</h3>
                         <p class="project-description">A company website showcasing development services and team portfolio.</p>
                         <div class="project-tech">
                             <span>HTML</span>
@@ -339,56 +389,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="pictures/Brahabobom.png" alt="Brahabobom School">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link" aria-label="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                                <a href="https://brahabobomschool.netlify.app/" class="project-link" aria-label="Live Demo">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">Brahabobom M/A School</h3>
-                        <p class="project-description">Educational institution website with information about programs and activities.</p>
-                        <div class="project-tech">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>Responsive Design</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="pictures/sandybertfood.png" alt="Sandybert Food">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link" aria-label="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                                <a href="https://sandybertfood.netlify.app/" class="project-link" aria-label="Live Demo">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">Sandybert Food</h3>
-                        <p class="project-description">Restaurant website featuring menu, online ordering, and location information.</p>
-                        <div class="project-tech">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="pictures/techskillshub.png" alt="Techskills Hub">
+                        <img src="pictures/Brahabobom.png" alt="Techskills Hub">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link" aria-label="View Code">
